--- a/BackEnd/testPage.html
+++ b/BackEnd/testPage.html
@@ -2,6 +2,6 @@
 
 </head>
 <body>
-    <!-- WikiBreeze content start--><h1>weww</h1><!-- WikiBreeze content end-->
+    <!-- WikiBreeze content start--><p>Example Text</p><!-- WikiBreeze content end-->
 
 </body>
